# fuel-efficient-snake

./: CMakeLists.txt  LICENSE.md  README.md
assets/text/: joining_letter.txt
src/: game_over.cpp  game_over.hpp  game_screen.cpp  game_screen.hpp  game_state.hpp  intro_screen.cpp  intro_screen.hpp  main.cpp  node.hpp  snake.cpp  snake.hpp  title_screen.cpp  title_screen.hpp
